test/classes/vass/ref-like-intents/ref-subclass.good
ref-subclass.chpl:6: In function 'procRefC':
ref-subclass.chpl:7: warning: here, 'arg' is set to the result of borrowing from a 'new'
ref-subclass.chpl:7: note: if you meant to save the result of new, change the type of 'arg' to not be 'borrowed'
ref-subclass.chpl:7: note: if you meant to refer to another variable storing the 'new', use an explicit variable, e.g. 'var myOwned = new C(); var myBorrowed = myOwned.borrow();'
ref-subclass.chpl:14: error: unresolved call 'procRefC(borrowed D?)'
ref-subclass.chpl:6: note: this candidate did not match: procRefC(ref arg: borrowed C?)
ref-subclass.chpl:14: note: because actual argument #1 with type 'borrowed D?'
ref-subclass.chpl:6: note: is passed to formal 'ref arg: borrowed C?'
